update kramdown to at least 2.3.1 as per security recommendation -> https://github.com/advisories/GHSA-52p9-v744-mwjj

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,4 +47,14 @@ ul.updates {
     font-weight: bold;
     font-family: Lucida Console, Courier, monospace;
   }
+
+  .sec::before {
+    content: "🔐SEC";
+    background-color: rgb(218, 188, 247);
+    border-radius: 8px;
+    padding-right: 8px;
+    margin-right: 4px;
+    font-weight: bold;
+    font-family: Lucida Console, Courier, monospace;
+  }
 }
